[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/TitleButton.gd" type="Script" id=1]
[ext_resource path="res://fonts/texgyreheros-regular.otf" type="FontFile" id=2]
[ext_resource path="res://textures/white/outline_crop_din_white_48dp.png" type="Texture2D" id=3]
[ext_resource path="res://textures/white/outline_arrow_forward_white_48dp.png" type="Texture2D" id=4]

[sub_resource type="FontFile" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect2:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect2/TextureRect:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
size = Vector2( 175, 35 )

[node name="btnTitle" type="Control"]
offset_right = 350.0
offset_bottom = 70.0
custom_minimum_size = Vector2( 350, 70 )
pivot_offset = Vector2( 200, 45 )
mouse_filter = 1
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -29.0
offset_right = 125.0
offset_bottom = 29.0
focus_mode = 1
theme_override_fonts/font = SubResource( 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
text = "Modes"
align = 1
uppercase = true

[node name="animPlayer" type="AnimationPlayer" parent="."]
anims/anim = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 200, 45 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -25, -10 )
shape = SubResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -24.0
offset_right = 68.0
offset_bottom = 24.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
texture = ExtResource( 4 )
expand = true

[node name="button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_Area2D_area_shape_exited"]
[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
